<resources>
    <string name="app_name">MockGPS</string>
    <string name="latitude">Latitude</string>
    <string name="longitudes">longitudes</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_location">Add New Location</string>
    <string name="play">Start</string>
    <string name="Pause">Pause</string>
    <string name="Start">Start</string>
    <string name="YouNeedAddSomeLocationBeforStartAp">You Need Add Some Location Befor You Can Start Mocking Your Device</string>
    <string name="KEY_PARCABLE_POSITION">ParcablePosition</string>
    <string name="Edit">Edit</string>
    <string name="ChangeLocatinoEvry">Change Location Every X Second</string>
    <string name="Import">Import Locations</string>
    <string name="Clear">Clear</string>
    <string name="YouRichTheEndOfTheLis">You Reach on The End Of List, Application Going To Repeat List From Beginning</string>
</resources>
